# ece1724_project

./: README.md
Backend/: LICENSE  (+1 more)
Backend/backend/: Cargo.toml  diesel.toml
Backend/backend/migrations/2024-11-23-234124_create_user_table/: up.sql
Backend/backend/migrations/2024-11-24-003211_add_unique_constraint_to_email_in_user_table/: down.sql  up.sql
Backend/backend/migrations/2024-12-07-004324_create_account_table/: up.sql
Backend/backend/migrations/2024-12-07-005254_rename_type_to_account_type/: down.sql  up.sql
Backend/backend/migrations/2024-12-07-010215_create_category_table/: up.sql
Backend/backend/migrations/2024-12-07-011653_create_transaction_table/: up.sql
Backend/backend/migrations/2024-12-07-015405_add_account_name_to_accounts/: down.sql  up.sql
Backend/backend/migrations/2024-12-07-220522_add_account_id_to_transactions/: down.sql  up.sql
Backend/backend/migrations/2024-12-08-040028_add_timestamp_to_transactions/: down.sql  up.sql
Backend/backend/src/: db.rs  main.rs  schema.rs
Backend/backend/src/handlers/: account_handler.rs  auth_handler.rs  category_handler.rs  mod.rs  report_handler.rs  transaction_handler.rs
Backend/backend/src/models/: account.rs  category.rs  mod.rs  transaction.rs  user.rs
Backend/backend/src/routes/: account.rs  auth.rs  category.rs  mod.rs  report.rs  transaction.rs
TUI/frontend/: Cargo.toml
TUI/frontend/src/: app.rs  main.rs
TUI/frontend/src/ui/: account_main.rs  category_main.rs  components.rs  cover.rs  homepage.rs  login.rs  mod.rs  report.rs  report_main.rs  signup.rs  transaction_create.rs
(+27 files in other folders)
