[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.15"
tokio = { version = "1.30", features = ["full"] }
chrono = "0.4.38"
