[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.11", features = ["json"] } # For making POST requests
tokio = { version = "1", features = ["full"] } # For async runtime
serde = { version = "1.0", features = ["derive"] } # For serializing request body
serde_json = "1.0" # For handling JSON responses